--- a/package.json
+++ b/package.json
@@ -10,10 +10,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1",
-    "antd": "^5.24.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "@emotion/is-prop-valid": "latest",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
@@ -42,51 +39,58 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@tauri-apps/api": "^2.0.0",
+    "@tauri-apps/plugin-dialog": "~2",
+    "@tauri-apps/plugin-fs": "~2",
+    "@tauri-apps/plugin-process": "~2",
+    "@tauri-apps/plugin-shell": "~2",
+    "@vitejs/plugin-react": "latest",
+    "antd": "^5.24.5",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "framer-motion": "latest",
     "input-otp": "1.4.1",
+    "jiti": "latest",
+    "less": "latest",
+    "lightningcss": "latest",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
+    "path": "latest",
+    "react": "^18.3.1",
     "react-day-picker": "8.10.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "latest",
+    "sass": "latest",
+    "sass-embedded": "latest",
     "sonner": "^1.7.1",
+    "stylus": "latest",
+    "sugarss": "latest",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.6",
-    "zod": "^3.24.1",
-    "@emotion/is-prop-valid": "latest",
-    "tsx": "latest",
-    "jiti": "latest",
-    "less": "latest",
-    "sass": "latest",
-    "yaml": "latest",
-    "stylus": "latest",
     "terser": "latest",
-    "sugarss": "latest",
-    "lightningcss": "latest",
-    "sass-embedded": "latest",
-    "vite": "latest",
-    "framer-motion": "latest",
     "three": "latest",
-    "@vitejs/plugin-react": "latest",
-    "path": "latest"
+    "tsx": "latest",
+    "vaul": "^0.9.6",
+    "vite": "latest",
+    "yaml": "latest",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1",
+    "@tauri-apps/cli": "^2.5.0",
+    "@types/node": "^22",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
-    "typescript": "~5.6.2",
-    "vite": "^6.0.3",
-    "@types/node": "^22",
     "postcss": "^8",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "typescript": "~5.6.2",
+    "vite": "^6.0.3"
   }
 }
