--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -8,10 +8,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1", features = [] }
+tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = { version = "1", features = [ "dialog-all", "fs-read-file", "fs-read-dir", "fs-exists", "fs-write-file", "shell-open"] }
+tauri = { version = "2", features = [] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 ring = "0.16.20"
@@ -19,6 +19,10 @@ data-encoding = "2.3.3"
 sysinfo = "0.29.0"
 sha2 = "0.10.6"
 chrono = "0.4.40"
+tauri-plugin-shell = "2"
+tauri-plugin-dialog = "2"
+tauri-plugin-process = "2"
+tauri-plugin-fs = "2"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
