--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -31,6 +31,12 @@ futures = "0.3"
 thiserror = "1.0"
 anyhow = "1.0"
 local-ip-address = "0.5.1"
+# SQLite相关依赖
+rusqlite = { version = "0.29.0", features = ["bundled"] }
+tokio-rusqlite = "0.4.0"
+r2d2 = "0.8.10"
+r2d2_sqlite = "0.22.0"
+once_cell = "1.18.0"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
