--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "@types/node": "^22",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
+    "@types/three": "^0.176.0",
     "@vitejs/plugin-react": "^4.3.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
