--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -37,6 +37,7 @@ tokio-rusqlite = "0.4.0"
 r2d2 = "0.8.10"
 r2d2_sqlite = "0.22.0"
 once_cell = "1.18.0"
+rust_xlsxwriter = "0.40.0"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
